# Basic

./: CMakeLists.txt  basic.cpp  basic.h  basicinteractionmanager.cpp  basicinteractionmanager.h  eventmanager.cpp  eventmanager.h  main.cpp  oldmain.cpp
include/: basicinteraction.h  eventvector.h
src/: basicinteraction.cpp  eventvector.cpp  main.cpp  newpattern.cpp
